<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Engage_DevelopmentActivity!</string>
    <string name="app_name">Engage_Development</string>

    <!-- Content description for ImageViews -->
    <string name="contentDescription_separator">Separator for the Name Field.</string>

    <!-- Button Strings -->
    <string name="button_create_account">Create Account</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_register">Register</string>
    <string name="button_login">Log In</string>
    <string name="button_skip">Skip</string>
    <string name="button_save">Save</string>

    <!-- Login/Register Strings -->
    <string name="login_username_text">Username:</string>
    <string name="login_password_text">Password:</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_confirm">Confirm Password</string>
    <string name="login_hint_email">Email Address</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="invalid_username_taken">Username is unavailable.</string>
    <string name="invalid_email_taken">Email is already registered.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="invalid_username_whitespace">Invalid username. No whitespaces allowed.</string>
    <string name="invalid_password_whitespace">Invalid password.  No whitespace allowed.</string>
    <string name="invalid_email_none_entered">You must enter an email.</string>
    <string name="invalid_password_none_entered">You must enter a password.</string>
    <string name="invalid_username_none_entered">You must enter a username.</string>
    <string name="invalid_username_password">The username or password is incorrect. Please try again.</string>
    <string name="register_username">Enter Desired Username: </string>
    <string name="register_email">Enter Your Email:</string>
    <string name="register_password">Enter Your Password:</string>
    <string name="register_cancel_btn_text">Cancel</string>
    <string name="register_btn_phone_text">Register</string>
    <string name="login_dialog_message">Logging in...</string>
    <string name="register_dialog_message">Registering...</string>
    <string name="register_invalid_matching_passwords">Your passwords must match.</string>
    <string name="login_invalid_username_whitespace">Invalid username. You cannot have whitespace in your username.</string>
    <string name="login_invalid_username_empty">Invalid username. You must enter a username.</string>
    <string name="login_invalid_password_empty">Invalid password. You must enter a password.</string>
    <string name="login_invalid_incorrect_something">Username or password is incorrect. Please try again.</string>
    <string name="login_invalid_parse_fail">An error occurred when attempting to connect to servers. Please try again later.</string>

    <!-- User Strings -->
    <string name="user_title_name">NAME</string>
    <string name="user_title_phone">PHONE</string>
    <string name="user_title_birthday">BIRTHDAY</string>
    <string name="user_title_location">LOCATION</string>
    <string name="user_title_gender">GENDER</string>
    <string name="user_hint_fname">First Name</string>
    <string name="user_hint_lname">Last Name</string>
    <string name="user_hint_phone">Phone (Optional)</string>
    <string name="user_hint_location">Hometown</string>
    <string name="user_hint_zip">Zipcode (Optional)</string>
    <string name="user_hint_birthday">Birthday (Optional)</string>
    <string name="user_hint_address">Address (Optional)</string>
    <string name="user_hint_gender">Gender</string>
    <string name="user_male">Male</string>
    <string name="user_female">Female</string>
    <string name="user_set_birthday">Set your birthday</string>
    <string name="user_save_success">Your information has been saved.</string>
    <string name="user_save_fail">There was an error saving your information.</string>
    <string name="user_choose_photo">Choose Photo</string>
    <string name="user_choose_photo_description">Select a photo that will be used as your profile photo.</string>
    <string name="user_choose_photo_use_camera">Take Picture</string>
    <string name="user_choose_photo_device">Select from device</string>
    <string name="menu_choose_photo">Choose Photo</string>

</resources>