<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/login_title_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_username_text" >
    </TextView>

    <EditText
        android:id="@+id/login_field_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_username"
        android:imeOptions="actionNext"
        android:singleLine="true" >

        <requestFocus>
        </requestFocus>
    </EditText>

    <TextView
        android:id="@+id/login_title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password_text" >
    </TextView>

    <EditText
        android:id="@+id/login_field_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_password"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        android:singleLine="true" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/login_button_create_account"
            style="@style/TextButtonsPhone"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="left"
            android:text="@string/button_create_account" >
        </Button>

        <Button
            android:id="@+id/login_button_forgot_password"
            style="@style/TextButtonsPhone"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right"
            android:text="@string/login_forgot_password" />
    </LinearLayout>

    <TextView
        android:id="@+id/blank_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:paddingBottom="6dip"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:text=" " >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/bottom_bar"
        android:gravity="center_vertical|center"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/login_button_login"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/button_login" />
    </LinearLayout>

</LinearLayout>