<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <EditText
            android:id="@+id/new_user_field_fname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/user_hint_fname"
            android:inputType="textPersonName"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/new_user_field_lname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/user_hint_lname"
            android:inputType="textPersonName"
            android:singleLine="true" />
    </LinearLayout>

    <!-- Layout for Gender -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:weightSum="1.0" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/user_hint_gender"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/new_user_gender_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="left"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/new_user_radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_male" />

            <RadioButton
                android:id="@+id/new_user_radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_female" />
        </RadioGroup>
    </RelativeLayout>

    <EditText
        android:id="@+id/new_user_field_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_hint_phone"
        android:inputType="phone"
        android:singleLine="true" />

    <EditText
        android:id="@+id/new_user_field_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_hint_location"
        android:inputType="textCapWords"
        android:singleLine="true" />

    <EditText
        android:id="@+id/new_user_field_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_hint_address"
        android:inputType="textPostalAddress"
        android:singleLine="true" />

    <EditText
        android:id="@+id/new_user_field_zip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_hint_zip"
        android:inputType="number"
        android:singleLine="true" />

    <EditText
        android:id="@+id/new_user_field_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_hint_dob"
        android:inputType="date"
        android:singleLine="true" />

    <!-- Spacer to force the buttons to the bottom -->
    <LinearLayout
        android:id="@+id/security_settings_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:orientation="vertical" />

    <!-- Layout for the buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerHorizontal"
        android:orientation="vertical"
        android:paddingTop="16dip"
        android:showDividers="beginning" >

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureWithLargestChild="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/leftSpacer"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone" />

            <Button
                android:id="@+id/new_user_button_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/new_user_later" />

            <Button
                android:id="@+id/new_user_button_save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:filterTouchesWhenObscured="true"
                android:maxLines="2"
                android:text="@string/new_user_save" />

            <LinearLayout
                android:id="@+id/rightSpacer"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>